[tool.poetry]
name = "data-stories"
version = "0.1.0"
description = ""
authors = ["Magdalena Surowka <magdalena@datali.ch>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
plotly = "^5.10.0"
folium = "^0.12.1"
ipykernel = "^6.15.1"
nbformat = "^5.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
